--- a/src/scss/global/_typography.scss
+++ b/src/scss/global/_typography.scss
@@ -1,2 +1,25 @@
 @use './functions' as * ;
 
+@font-face {
+    font-display: swap;
+    font-family: 'Roboto';
+    src: url('../assets/fonts/Roboto-Regular.ttf') format('truetype');
+    font-weight: 400;
+}
+
+@font-face {
+    font-display: swap;
+    font-family: 'Roboto';
+    src: url('../assets/fonts/Roboto-Bold.ttf') format('truetype');
+    font-weight: 700;
+}
+
+:root {
+    --ff-primary:'Roboto', 'Helvetica Neue', Arial, sans-serif;
+    --fs-h2: #{fluid(40, 56, 375, 768, rem)};
+    --fs-body: #{rem(16)};
+    --fs-label: #{rem(12)};
+    --fw-1: 400;
+    --fw-2: 700;
+    --lh-body: 1.5;
+}
