--- a/src/scss/global/_base.scss
+++ b/src/scss/global/_base.scss
@@ -12,7 +12,15 @@ html {
 }
 
 body {
-    line-height: 1.5; 
+    font-family: var(--ff-primary);
+    font-size: var(--fs-body);
+    font-weight: var(--fw-1);
+    line-height: var(--lh-body);
+    color: var(--clr-primary);
+}
+
+h2 {
+    font-size: var(--fs-h2);
 }
 
 h1, h2, h3 {
@@ -31,6 +39,7 @@ img, picture, video, canvas, svg {
 
 input, button, textarea, select {
     font: inherit;
+    color: inherit;
 }
 
 p, h1, h2, h3, h4, h5, h6 {
@@ -43,4 +52,8 @@ h1, h2, h3, h4, h5, h6 {
 
 a, a:visited, a:active {
     text-decoration: none;
+}
+
+ul {
+    list-style-type: none;
 }
