--- a/src/scss/global/_colors.scss
+++ b/src/scss/global/_colors.scss
@@ -2,7 +2,7 @@
     --clr-primary: hsl(234, 29%, 20%);
     --clr-secondary: hsl(4, 100%, 67%);
     --clr-bg: hsl(235, 18%, 26%);
-    --clr-placeholder: hsl(0, 0%, 46%);
+    --clr-input: hsl(0, 0%, 46%);
     --clr-light: hsl(0, 0%, 100%);
     --clr-linear-grad: linear-gradient(90deg, hsl(15, 100%, 61%), hsl(346, 100%, 66%));
     --clr-btn-shadow: hsla(4, 100%, 67%, 0.5);
