--- a/src/scss/global/_colors.scss
+++ b/src/scss/global/_colors.scss
@@ -6,4 +6,5 @@
     --clr-light: hsl(0, 0%, 100%);
     --clr-linear-grad: linear-gradient(90deg, hsl(15, 100%, 61%), hsl(346, 100%, 66%));
     --clr-btn-shadow: hsla(4, 100%, 67%, 0.5);
+    --clr-error-bg: hsl(2, 100%, 95%);
 }
