--- a/src/scss/components/_breakpoints.scss
+++ b/src/scss/components/_breakpoints.scss
@@ -61,10 +61,6 @@
         &__email {
             margin-block-end: 8px;
         }
-
-        &__button {
-            padding-inline: 147.5px;
-        }
     }
 
     .modal {
@@ -81,11 +77,47 @@
 
         &::backdrop {
             background-color: var(--clr-primary);
+            z-index: 999;
         }
 
         &__desc {
             margin-block-end: 0;
             max-inline-size: unset;
+        }
+    }
+}
+
+@media (width > em(1200)) {
+    
+    .sign-up {
+        flex-direction: row-reverse;
+        column-gap: 64px;
+        max-inline-size: rem(904);
+        block-size: rem(641);
+        padding-inline: 32px;
+        padding-block: 24px;
+
+        &__content {
+            padding: 0;
+            row-gap: 32px;
+            align-self: center;
+            min-inline-size: rem(376);
+        }
+
+        &__picture {
+            margin: 0;
+        }
+
+        &__img {
+            block-size: rem(593);
+        }
+
+        &__email {
+            margin-block-end: 16px;
+        }
+
+        &__button {
+            padding-inline: 0px;
         }
     }
 }
