--- a/src/scss/global/_colors.scss
+++ b/src/scss/global/_colors.scss
@@ -7,4 +7,6 @@
     --clr-linear-grad: linear-gradient(90deg, hsl(15, 100%, 61%), hsl(346, 100%, 66%));
     --clr-btn-shadow: hsla(4, 100%, 67%, 0.5);
     --clr-error-bg: hsl(2, 100%, 95%);
+    --clr-attr: hsl(4, 50%, 50%);
+    --clr-attr-sec: hsl(4, 100%, 73%);
 }
